--- a/index.html
+++ b/index.html
@@ -25,15 +25,26 @@ const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb
   .then(blob => blob.json())
   .then(data => cities.push(...data));
 
-  function findMathces(wordToMatch, cities){
+  function findMatches(wordToMatch, cities){
     return cities.filter(place => {
       //figure out
       const regex = new RegExp(wordToMatch, 'gi');
-
       return place.city.match(regex) || place.state.match(regex);
-
     })
   }
+
+  function displayMatches(){
+    const matchArray = findMatches(this.value, cities);
+    console.log(matchArray);
+    }
+  
+
+  const searchInput = document.querySelector('.search');
+  const suggestions = document.querySelector('.suggestions');
+
+  searchInput.addEventListener('change', displayMatches);
+  searchInput.addEventListener('keyup', displayMatches);
+
 
 
 </script>
